--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "fs": "^0.0.1-security",
     "html2canvas": "^1.0.0-alpha.12",
     "jspdf": "^1.4.1",
+    "materialize-css": "^1.0.0-rc.2",
     "pdfmake": "^0.1.38",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
